--- a/app.html
+++ b/app.html
@@ -175,7 +175,7 @@ var patcher = {
 		}
 	},
 	/*
-	Verifies a ip, username, password and port are provided. Does not do format checking of validity checking.
+	Verifies a ip, username, password and port are provided. Does not do format checking or validity checking.
 	*/
 	validateCredentials:function(){
 		var ip = document.getElementById('serverIP').value;
